2004-11-19  Shawn Betts  <katia_dilkina@verizon.net>

	* nethack-nhlaunch.el (nethack-connect-to-server): make autoload
	require nethack.

	* nethack.el (nethack): make autoload

2004-11-19  Shawn Betts  <sabetts@vcn.bc.ca>

	* nethack.el (nethack-add-menu-hook): new hook

	* nethack-example.el (nethack-x-highlights): new defvar
	(nethack-x-highlight-option): new function

	* nethack-cmd.el (technique): new nethack command

	* nethack-api.el (nhapi-add-menu): run the nethack-add-menu-hook.

2004-11-16  Shawn Betts  <sabetts@vcn.bc.ca>

	* mkpatch: src, ref, and work are pulled from args 1, 2, and 3.

	* Makefile: Add rules for building slashem patches

	* nethack.el (nethack): call nethack-start with the process as an
	arg.
	(nethack-connect-to-server): remove
	(nethack-is-running): new function
	(nethack-start): new function
	(nethack-create-process): remove function

	* nethack-keys.el (nh-map-mode-map): add keybinding for travel command

	* nethack-cmd.el (travel): new nethack command

2004-11-14  Shawn Betts  <sabetts@vcn.bc.ca>

	* nethack.el (nethack): call nethack-create-process
	(nethack-connect-to-server): new function
	(nethack-create-process): new function
	(nh-send-and-wait): check if nh-proc's status is 'open or 'run

	* nethack-cmd.el (options): new command

	* nethack-api.el (nh-options-cbreak): new defvar
	(nh-options-dec-graphics): likewise
	(nh-options-echo): likewise
	(nh-options-ibm-graphics): likewise
	(nh-options-msg-history): likewise
	(nh-options-num-pad): likewise
	(nh-options-news): likewise
	(nh-options-window-inited): likewise
	(nh-options-vision-inited): likewise
	(nh-options-menu-tab-sep): likewise
	(nh-options-menu-requested): likewise
	(nh-options-num-pad-mode): likewise
	(nh-options-purge-monsters): likewise
	(nh-options-bouldersym): likewise
	(nh-options-travelcc): likewise
	(nh-options-sanity-check): likewise
	(nh-options-mon-polycontrol): likewise
	(nhapi-options): new function

2004-11-14  Shawn Betts  <sabetts@vcn.bc.ca>
